logs/yozuch.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/Yozuch-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/compiled-data'...
Listing './lib/python3.5/site-packages/tests/compiled-data/archive'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2011'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2011/01'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2011/01/01'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2011/01/01/post-readmore'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/09'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/09/20'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/09/20/post-file-metadata'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/10'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/10/02'...
Listing './lib/python3.5/site-packages/tests/compiled-data/blog/2013/10/02/post'...
Listing './lib/python3.5/site-packages/tests/compiled-data/documents'...
Listing './lib/python3.5/site-packages/tests/compiled-data/documents/page2'...
Listing './lib/python3.5/site-packages/tests/compiled-data/documents/page3'...
Listing './lib/python3.5/site-packages/tests/compiled-data/page'...
Listing './lib/python3.5/site-packages/tests/compiled-data/page/2'...
Listing './lib/python3.5/site-packages/tests/compiled-data/page/3'...
Listing './lib/python3.5/site-packages/tests/compiled-data/tag'...
Listing './lib/python3.5/site-packages/tests/compiled-data/tag/tag-2'...
Listing './lib/python3.5/site-packages/tests/compiled-data/tag/tag1'...
Listing './lib/python3.5/site-packages/tests/compiled-data/tags'...
Listing './lib/python3.5/site-packages/tests/compiled-data-validator'...
Listing './lib/python3.5/site-packages/tests/data'...
Listing './lib/python3.5/site-packages/tests/data/assets'...
Listing './lib/python3.5/site-packages/tests/data/documents'...
Listing './lib/python3.5/site-packages/tests/data/pages'...
Listing './lib/python3.5/site-packages/tests/data/posts'...
Listing './lib/python3.5/site-packages/tests/data/templates'...
Listing './lib/python3.5/site-packages/tests/data/themes'...
Listing './lib/python3.5/site-packages/tests/data/themes/test'...
Listing './lib/python3.5/site-packages/tests/data/themes/test/assets'...
Listing './lib/python3.5/site-packages/tests/data/themes/test/templates'...
Listing './lib/python3.5/site-packages/tests/data-invalid'...
Compiling './lib/python3.5/site-packages/tests/data-invalid/config.py'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yozuch'...
Listing './lib/python3.5/site-packages/yozuch/generators'...
Listing './lib/python3.5/site-packages/yozuch/loaders'...
Listing './lib/python3.5/site-packages/yozuch/plugins'...
Listing './lib/python3.5/site-packages/yozuch/templates'...
Listing './lib/python3.5/site-packages/yozuch/themes'...
Listing './lib/python3.5/site-packages/yozuch/themes/base'...
Listing './lib/python3.5/site-packages/yozuch/themes/base/templates'...
Listing './lib/python3.5/site-packages/yozuch/themes/base/templates/includes'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation/assets'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation/assets/css'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation/assets/img'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation/templates'...
Listing './lib/python3.5/site-packages/yozuch/themes/foundation/templates/includes'...
Listing './share'...
Listing './share/python-wheels'...
